# signalchain

./: .gitignore  CLAUDE.md  DIAGRAMS.md  README.md  WORKSPACE_SETUP.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: DECISIONS.md  Signal_Chain_Project_Brief.md  Signal_Chain_Test_Cases.md
src/signal_chain/: __init__.py  __main__.py  app.py  provider_manager.py
src/signal_chain/models/: config.py  context.py  conversation.py  settings.py
src/signal_chain/modules/: base.py  connected_accounts.py  conversation_history.py  markdown_output.py  network_gateway.py  pedal_connectedAccounts.py  pedal_conversationHistory.py  pedal_markdownOutput.py  pedal_webAccess.py  registry.py  runner.py
src/signal_chain/providers/: base.py  claude.py  gemini_provider.py  groq_provider.py  ollama.py  openrouter.py
src/signal_chain/resources/: manager.py
src/signal_chain/viewmodels/: base.py  conversation.py  pedalboard.py  startup.py
tests/: conftest.py  test_code_block_rendering.py  test_context.py  test_conversation_history.py  test_conversations.py  test_errors.py  test_features.py  test_generation_gateway_wiring.py  test_markdown_rendering.py  test_modules.py  test_mvvm_foundation.py  test_pedalboard_viewmodel.py  test_per_message_markdown.py  test_providers.py  test_resources.py  test_security.py  test_settings.py  test_smoke.py  test_startup.py  test_threading.py  test_ui_integration.py  test_web_access_gate.py  test_web_access_pedal.py  test_writer_codeblock.py  test_writer_core.py  test_writer_markdown.py
(+12 files in other folders)
